fix: update secret

--- a/cluster/apps/home/home-assistant/home-assistant.sops.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant.sops.yaml
@@ -7,7 +7,7 @@ metadata:
 stringData:
     HASS_ELEVATION: ENC[AES256_GCM,data:UzJu,iv:HIUKhbyqbMXfF5RevVp1+pibRh2n8dtpo8w4nFLcPD4=,tag:IbQPPU1bbx+pGYnWfcQVMg==,type:str]
     HASS_LATITUDE: ENC[AES256_GCM,data:e9Be1ww=,iv:I1Uauf3D95AF6Lm5a8SK/g4XZOSqQQ6LMYjxGM09Lrw=,tag:6i1VbVpTjuGlJRa13O7SPQ==,type:str]
-    HASS_LONGITUDE: ENC[AES256_GCM,data:neTlgi0=,iv:/kc/13rmo4QCVU9PAqh5O9GsPlHPPdSfUmqfPk3iXxI=,tag:ti7LcQQtWTYQnJ8GVIG2mw==,type:str]
+    HASS_LONGITUDE: ENC[AES256_GCM,data:+svDrv1Z,iv:z4Gu/V8TMgTDf7C5hzKwHEYUbtH9uI3gXeav7oFH0lk=,tag:rqqE2I+Fsn1XNIqN1IIxuQ==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -26,8 +26,8 @@ sops:
             ZzZKazdYbWY5amhXcTRFYmM0WW9Id3MKG5Rydz0i5TL8mhsQNLAQWfuecMbELKD4
             1mApI/KZWIzd+MgOFWShKpxh9j6o9XV+0w3u77NHv7wBv+ko1YzSAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-05T16:42:46Z"
-    mac: ENC[AES256_GCM,data:LoK88pR/7iodmNHufwxiPmI2Dl+t7cahil6AcNxgc2BGT2veWUBI6z6wTeP0itN+PXjYmoKFU76/xBYbV907+r2W73ei3u2ONnyK9MUZLChTWuFg9iOutdO8PQxuaCJ7Or2SukLmRQMc+jjPbn701zyE0jF9Z+n1vRj0TwwXUBE=,iv:VJ3GuMdqu7SQtZO6xtIhLHELnd+FdiaKXU6cO2Shz3A=,tag:r0d1TzDnou0PbTnhHuVOrA==,type:str]
+    lastmodified: "2022-04-05T16:59:12Z"
+    mac: ENC[AES256_GCM,data:HHi/UQp6YTEjphR8Sms+rFAeRX02apK0eO1KGef70D0YAz+UZb/8HooKtdkfFhiFHFBrVBEzXBDVTcw+uAJjqQ5iIjTl6BGeeYkEAnVSXc1fjJEsQRiOzhdoSmJAuQ9xJs+9B2Zel2Q67j3X0NUyHJThJzuMFgHH1CgMEotqxrk=,iv:uovuG/VTR85qpYXm2SvemHBtYC8oSpACtX6d7gNFepg=,tag:B942EKWQKgGS66vi1lsiXw==,type:str]
     pgp:
         - created_at: "2022-03-26T18:42:27Z"
           enc: |
