--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,6 +8,7 @@
     ":separatePatchReleases",
     "docker:enableMajor",
     ":enablePreCommit",
+    "github>claughinghouse/home-ops//.github/renovate/allowedVersions",
     "github>claughinghouse/home-ops//.github/renovate/autoMerge",
     "github>claughinghouse/home-ops//.github/renovate/labels",
     "github>claughinghouse/home-ops//.github/renovate/semanticCommits"
