--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -36,8 +36,12 @@ spec:
                 icon_url: https://avatars3.githubusercontent.com/u/3380462
                 username: "Prometheus Bot"
                 send_resolved: true
+                html: true
                 priority: |-
                   {{ if eq .Status "firing" }}1{{ else }}0{{ end }}
+                url_title: View in Alert Manager
+                url: |-
+                  {{ .ExternalURL }}/#/alerts?receiver={{ .Receiver | urlquery }}
                 title: |-
                   [{{ .Status | toUpper -}}
                   {{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{- end -}}
@@ -51,10 +55,10 @@ spec:
                     {{- end }}
                     {{- if ne .Annotations.description "" }}
                       <b>Description:</b> <i>{{ .Annotations.description }}</i>
-                    {{- else if .Annotations.summary "" }}
-                      <b>Description:</b> <i>{{ .Annotations.summary }}</i>
-                    {{- else if .Annotations.message "" }}
-                      <b>Description:</b> <i>{{ .Annotations.message }}</i>
+                    {{- else if ne .Annotations.summary "" }}
+                      <b>Summary:</b> <i>{{ .Annotations.summary }}</i>
+                    {{- else if ne .Annotations.message "" }}
+                      <b>Message:</b> <i>{{ .Annotations.message }}</i>
                     {{- else }}
                       <b>Description:</b> <i>N/A</i>
                     {{- end }}
