--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -60,6 +60,12 @@ spec:
       config:
         enabled: true
         existingClaim: home-assistant-config-v1
+      backup:
+        enabled: true
+        type: hostPath
+        hostPath: /mnt/home/backups/home-assistant
+        mountPath: /config/Backups
+        readOnly: false
     podAnnotations:
       secret.reloader.stakater.com/reload: "home-assistant"
     addons:
