--- a/cluster/apps/kasten-io/k10/profiles/k10-backups-pvc.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/k10-backups-pvc.yaml
@@ -11,7 +11,7 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /v
+    path: /mnt/kasten
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -21,7 +21,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: k10-backup-nfs
+  storageClassName: k10-backup-cephfs
   resources:
     requests:
       storage: 1Mi
