--- a/cluster/apps/kasten-io/k10/blueprints/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/blueprints/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secret.sops.yaml
-  - backblaze-b2.yaml
-  - k10-disaster-recovery.yaml
+  - pod-spec-override.yaml
+  # - home.yaml
   - media.yaml
+  # - k10-disaster-recovery.yaml
