feat: test rclone with kanister

--- a/cluster/apps/kasten-io/k10/policies/media.yaml
+++ b/cluster/apps/kasten-io/k10/policies/media.yaml
@@ -30,8 +30,8 @@ spec:
           name: media-migration-token
           namespace: kasten-io
         profile:
-          name: media
-          # name: b2-k3s-k10
+          # name: media
+          name: b2-k3s-k10
           namespace: kasten-io
       retention: {}
   frequency: "@daily"
