--- a/cluster/apps/kasten-io/k10/profiles/k10-backups-pvc.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/k10-backups-pvc.yaml
@@ -1,17 +1,33 @@
----
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: k10-backups
+# spec:
+#   storageClassName: cephfs
+#   capacity:
+#     storage: 1Mi
+#   accessModes:
+#     - ReadWriteMany
+#   persistentVolumeReclaimPolicy: Retain
+#   hostPath:
+#     path: /mnt/kasten
+
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: k10-backups
+  labels:
+    type: local
 spec:
-  # storageClassName: k10-backup-cephfs
-  # capacity:
-  #   storage: 1Mi
+  storageClassName: manual
+  capacity:
+    storage: 1Mi
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /mnt/kasten
+    path: "/mnt/kasten"
+
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -21,7 +37,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: k10-backup-cephfs
+  storageClassName: cephfs
   resources:
     requests:
       storage: 1Mi
