--- a/cluster/apps/kasten-io/k10/profiles/k10-backups-pvc.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/k10-backups-pvc.yaml
@@ -1,33 +1,17 @@
-# ---
-# apiVersion: v1
-# kind: PersistentVolume
-# metadata:
-#   name: k10-backups
-# spec:
-#   storageClassName: cephfs
-#   capacity:
-#     storage: 1Mi
-#   accessModes:
-#     - ReadWriteMany
-#   persistentVolumeReclaimPolicy: Retain
-#   hostPath:
-#     path: /mnt/kasten
-
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: k10-backups
-  labels:
-    type: local
 spec:
-  storageClassName: manual
+  storageClassName: k10-backup-cephfs
   capacity:
     storage: 1Mi
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: "/mnt/kasten"
-
+    path: /mnt/kasten
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -37,7 +21,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: cephfs
+  storageClassName: k10-backup-cephfs
   resources:
     requests:
       storage: 1Mi
