--- a/cluster/apps/media/youtube-dl/helm-release.yaml
+++ b/cluster/apps/media/youtube-dl/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: youtubedl-material
-      version: 4.2
+      version: 4.2.0
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: tzahi12345/youtubedl-material
-      tag: 4.2
+      tag: v4.2
     env:
       TZ: "${TIMEZONE}"
     ingress:
