--- a/cluster/apps/media/youtube-dl/helm-release.yaml
+++ b/cluster/apps/media/youtube-dl/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: youtube-dl
+  name: youtubedl-material
   namespace: media
 spec:
   interval: 5m
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: tzahi12345/youtubedl-material
-      tag: v4.2
+      tag: 4.2
     env:
       TZ: "${TIMEZONE}"
     ingress:
