--- a/cluster/apps/media/youtube-dl/helm-release.yaml
+++ b/cluster/apps/media/youtube-dl/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: tzahi12345/youtubedl-material
-      tag: 4.2
+      tag: "4.2"
     env:
       TZ: "${TIMEZONE}"
     ingress:
