--- a/cluster/apps/kasten-io/k10/policies/media.yaml
+++ b/cluster/apps/kasten-io/k10/policies/media.yaml
@@ -1,49 +1,49 @@
-# apiVersion: config.kio.kasten.io/v1alpha1
-# kind: Policy
-# metadata:
-#   name: media
-#   namespace: kasten-io
-# spec:
-#   actions:
-#     - action: backup
-#       backupParameters:
-#         filters:
-#           includeResources:
-#             - group: ""
-#               version: ""
-#               resource: persistentvolumeclaims
-#               name: ""
-#               matchExpressions:
-#                 - key: kasten.io/backup-volume
-#                   operator: In
-#                   values:
-#                     - enabled
-#         profile:
-#           name: b2-k3s-k10
-#           namespace: kasten-io
-#     - action: export
-#       exportParameters:
-#         exportData:
-#           enabled: true
-#         frequency: "@daily"
-#         migrationToken:
-#           name: media-migration-token
-#           namespace: kasten-io
-#         profile:
-#           # name: media
-#           name: b2-k3s-k10
-#           namespace: kasten-io
-#       retention: {}
-#   frequency: "@daily"
-#   retention:
-#     daily: 7
-#     weekly: 4
-#   selector:
-#     matchExpressions:
-#       - key: k10.kasten.io/appNamespace
-#         operator: In
-#         values:
-#           - media
+apiVersion: config.kio.kasten.io/v1alpha1
+kind: Policy
+metadata:
+  name: media
+  namespace: kasten-io
+spec:
+  actions:
+    - action: backup
+      backupParameters:
+        filters:
+          includeResources:
+            - group: ""
+              version: ""
+              resource: persistentvolumeclaims
+              name: ""
+              matchExpressions:
+                - key: kasten.io/backup-volume
+                  operator: In
+                  values:
+                    - enabled
+        profile:
+          name: b2-k3s-k10
+          namespace: kasten-io
+    - action: export
+      exportParameters:
+        exportData:
+          enabled: true
+        frequency: "@daily"
+        migrationToken:
+          name: media-migration-token
+          namespace: kasten-io
+        profile:
+          # name: media
+          name: b2-k3s-k10
+          namespace: kasten-io
+      retention: {}
+  frequency: "@daily"
+  retention:
+    daily: 7
+    weekly: 4
+  selector:
+    matchExpressions:
+      - key: k10.kasten.io/appNamespace
+        operator: In
+        values:
+          - media
 
 # kind: Policy
 # apiVersion: config.kio.kasten.io/v1alpha1
