debug: frlone the whole dir

--- a/cluster/apps/kasten-io/k10/blueprints/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/blueprints/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - secret.sops.yaml
   # - pod-spec-override.yaml
   # - home.yaml
-  # - media.yaml
+  - media.yaml
   # - k10-disaster-recovery.yaml
