--- a/cluster/apps/kasten-io/k10/blueprints/media.yaml
+++ b/cluster/apps/kasten-io/k10/blueprints/media.yaml
@@ -22,15 +22,15 @@ actions:
                 volumeMounts:
                   - name: rclone-conf
                     mountPath: /config
-                  - name: k10-backups
-                    mountPath: /mnt/k10-backups
+                  - name: media
+                    mountPath: /mnt/media
             volumes:
               - name: rclone-conf
                 secret:
                   secretName: rclone-conf
-              - name: k10-backups
-                persistentVolumeClaim:
-                  claimName: k10-backups
+              - name: media
+                hostPath:
+                  path: /mnt/media
           command:
             - "rclone"
             - "-v"
