feat: add ghost internally only

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -7,6 +7,11 @@ metadata:
 stringData:
     SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:85XowwVNSyjqRbNhQoxFcn8rwQvr/mfDJcj+Mg+7qPttzGe7bUDFmu1Aru0z4Gk+yjZuW2xJE8cTr76xnSMuWpsB2MSa7wrcS6ohqabWcCAFHeM0iste21YKBs80Uj3E24fCQ+ZMAdAdHGsTvhI+hJv78qtpiMoYOpVaIBw6,iv:epWvDGaBq0XPPPfs1uoNoPPx890RumDTYheASqeIl8o=,tag:yyLvrqJzDzKZR8cAb1H4fA==,type:str]
     SECRET_EMAIL: ENC[AES256_GCM,data:YJ0ywFiWLA6eFwOIbVCKnJdXohh6vhwxkw==,iv:K592a2alZbFrDwwid+mhNWGcOEGIM1xzJtceBx0RTP8=,tag:nZbZJxxI3WHfPg3jyc2a1w==,type:str]
+    SECRET_GHOST_DB_PASS: ENC[AES256_GCM,data:VL/A0P8wpUv7keCjb+EjEa8DgmxZXUa1+SUrCXDQwG/dTpUk,iv:mYG0vKWZeCi4iONn3wRHYONVG4MLb78px5fFb+Ww/OY=,tag:69OnP09dufWgyZuiFOWl6Q==,type:str]
+    SECRET_GHOST_DB_USER: ENC[AES256_GCM,data:uRvd7lUqoOGAdne/cNS8Y1H6z+qb6HTBPJwoz+ruQyX5SUmg,iv:DKQk1gcA89zOKksiVc+QlpWv/LKUlVXo59CcUAL77fQ=,tag:ecE1rpcwovIakfepu4snsw==,type:str]
+    SECRET_GHOST_DB: ENC[AES256_GCM,data:cRR3egg4BQ==,iv:jXGtwr5jvCAn6bGVKJGoGvG9n3FBoF6Mxqgb9zGn8dg=,tag:SLa+OaMyytrN9QxSyu41tA==,type:float]
+    SECRET_GHOST_DOMAIN: ENC[AES256_GCM,data:ZIQzp/2sTxymkQ==,iv:BNcCnn30k601phl805kF/WcJPW4CrD7CXTpR13J6aVU=,tag:MC0tgc9ZS7Kl0xBQtjqS+w==,type:str]
+    SECRET_GHOST_PASS: ENC[AES256_GCM,data:Oa9X5R+cxXAlia3zfUVgbCQRQ/jfDmXa/CcMgkxpwQye5UYK,iv:xA2yUpL61EWyu2+Ow1Ywm3dlCwwrO/wW4aYsn5Fmm3w=,tag:Ob2tdxdSU8+QETNy0b/Wfg==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:zkpE8PKI/2si3ZwkTw==,iv:t9EYCs7N7YbVqtq6GMDUytazClH08RT4w5uD4swGho0=,tag:sgivAkgfq9H3he3+9GZD+w==,type:str]
     SECRET_KASTEN_BUCKET_PATH: ENC[AES256_GCM,data:bMER47cY4mNWW3aKKgppGVKjizH4ciz9K3FlIbUXM5zI5EdG7Xq4snAINoKnitvHknc=,iv:1QacuI87g41RXtWIu5g8DnAp5a6JjriJmM/BTBqQKnY=,tag:Y+LraoIlWNTFiZpujoKHLg==,type:str]
     SECRET_KASTEN_BUCKET: ENC[AES256_GCM,data:AezL6FDCHg==,iv:8b0QOwrs9iEJ8k11cO9MbnR4KLE9dDT+RrT+IpwmXlY=,tag:2NHWkTORXct7gUepRgVXYg==,type:str]
@@ -40,8 +45,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-05T16:19:35Z"
-    mac: ENC[AES256_GCM,data:a4X/LoLzExXt3QibN3Pw3FjPCc7ouG9ymw1MQGuanPbeCYEa+YOATJANdiFOUB7ADUsO8+tqjTwhAzcSOG9zYykrmyC8gu/DlLI7vNTkpjB/ywMSUr+u8mhmWHXn1re/ib3895pqAynWny7fLG/z2KN+jm97b6bnR84/OLDv0fg=,iv:wjrncmmusiUZPUSLMuNFyhpsodzjEmitiof1TuAdiq4=,tag:c3hF0ZUuYe1ntcoK/798xw==,type:str]
+    lastmodified: "2022-04-10T20:49:33Z"
+    mac: ENC[AES256_GCM,data:tHrV1HVm4964RmkkyfnKT3mBPLhZvHlKl2aclRdGv6CUGiwPb13mMHmddA3UkK0+h5PhjddrLN9Mq0KIGPBSD3FdV2dHQXJbltK3VGirbZjX/Hl/BTd0oloXCbOR3VhsaQ3UlF0yQyAUE1EMlB0tODaqdwSWXa7Iy7n+MGCD0UQ=,iv:yCTsxq2r+DUMlsh7IPbND/YE/UftCGYEyEh8g8WQM4g=,tag:0muzQ7570KfTV4QBt96/YA==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
