feat: add ghost internally only

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -9,7 +9,7 @@ stringData:
     SECRET_EMAIL: ENC[AES256_GCM,data:YJ0ywFiWLA6eFwOIbVCKnJdXohh6vhwxkw==,iv:K592a2alZbFrDwwid+mhNWGcOEGIM1xzJtceBx0RTP8=,tag:nZbZJxxI3WHfPg3jyc2a1w==,type:str]
     SECRET_GHOST_DB_PASS: ENC[AES256_GCM,data:VL/A0P8wpUv7keCjb+EjEa8DgmxZXUa1+SUrCXDQwG/dTpUk,iv:mYG0vKWZeCi4iONn3wRHYONVG4MLb78px5fFb+Ww/OY=,tag:69OnP09dufWgyZuiFOWl6Q==,type:str]
     SECRET_GHOST_DB_USER: ENC[AES256_GCM,data:uRvd7lUqoOGAdne/cNS8Y1H6z+qb6HTBPJwoz+ruQyX5SUmg,iv:DKQk1gcA89zOKksiVc+QlpWv/LKUlVXo59CcUAL77fQ=,tag:ecE1rpcwovIakfepu4snsw==,type:str]
-    SECRET_GHOST_DB: ENC[AES256_GCM,data:cRR3egg4BQ==,iv:jXGtwr5jvCAn6bGVKJGoGvG9n3FBoF6Mxqgb9zGn8dg=,tag:SLa+OaMyytrN9QxSyu41tA==,type:float]
+    SECRET_GHOST_DB: ENC[AES256_GCM,data:MkAq7FQES34=,iv:kgo9Mne/QVS+pdXZbz7crAdEjgjWEdGBzCBZzGlUf2U=,tag:0QwLKO5UbsGN84T/nLwAJw==,type:str]
     SECRET_GHOST_DOMAIN: ENC[AES256_GCM,data:ZIQzp/2sTxymkQ==,iv:BNcCnn30k601phl805kF/WcJPW4CrD7CXTpR13J6aVU=,tag:MC0tgc9ZS7Kl0xBQtjqS+w==,type:str]
     SECRET_GHOST_PASS: ENC[AES256_GCM,data:Oa9X5R+cxXAlia3zfUVgbCQRQ/jfDmXa/CcMgkxpwQye5UYK,iv:xA2yUpL61EWyu2+Ow1Ywm3dlCwwrO/wW4aYsn5Fmm3w=,tag:Ob2tdxdSU8+QETNy0b/Wfg==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:zkpE8PKI/2si3ZwkTw==,iv:t9EYCs7N7YbVqtq6GMDUytazClH08RT4w5uD4swGho0=,tag:sgivAkgfq9H3he3+9GZD+w==,type:str]
@@ -45,8 +45,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-10T20:49:33Z"
-    mac: ENC[AES256_GCM,data:tHrV1HVm4964RmkkyfnKT3mBPLhZvHlKl2aclRdGv6CUGiwPb13mMHmddA3UkK0+h5PhjddrLN9Mq0KIGPBSD3FdV2dHQXJbltK3VGirbZjX/Hl/BTd0oloXCbOR3VhsaQ3UlF0yQyAUE1EMlB0tODaqdwSWXa7Iy7n+MGCD0UQ=,iv:yCTsxq2r+DUMlsh7IPbND/YE/UftCGYEyEh8g8WQM4g=,tag:0muzQ7570KfTV4QBt96/YA==,type:str]
+    lastmodified: "2022-04-10T20:59:05Z"
+    mac: ENC[AES256_GCM,data:AcbmF7KtbbglOAgQAb3G5PfjcWyt9aDFpI1ICiybEf+J91hgIA38F5HW1EMC3+XpuHmGG9wwbmb9DwbYbPOApBMatoWjIpdcuylYlH2pnteBiLs588rD3J3aYzFQVwAxpOJuoNucI30DpOa9xpVVHGwRqurX5iXqBxfxPHdaWew=,iv:rNLa+L3fMNMBcbFPSQpZUbkLwIq1efCuIxRE/f1hsMY=,tag:qUHSAlVmpjGWYTaempVxGQ==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
