--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: ghost
-      tag: v4.43.0
+      tag: 4.41.3
     env:
       TZ: "${TIMEZONE}"
       url: "${SECRET_GHOST_DOMAIN}"
