--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -48,7 +48,7 @@ spec:
         existingClaim: ghost-config-v1
         mountPath: /var/lib/ghost/content
     mariadb:
-    enabled: false
+    enabled: true
     architecture: standalone
     auth:
       database: "${SECRET_GHOST_DB}"
