--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       TZ: "${TIMEZONE}"
       url: "${SECRET_GHOST_DOMAIN}"
       database__client: mysql
-      database__connection__host: ghost-mariadb.default.svc.cluster.local
+      database__connection__host: ghost-mariadb
       database__connection__user: "${SECRET_GHOST_DB_USER}"
       database__connection__password: "${SECRET_GHOST_DB_PASS}"
       database__connection__database: "${SECRET_GHOST_DB}"
