--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -42,6 +42,8 @@ spec:
         tls:
           - hosts:
               - *host
+    podAnnotations:
+      secret.reloader.stakater.com/reload: "ghost"
     persistence:
       content:
         enabled: true
