--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -10,7 +10,7 @@ stringData:
     SECRET_GHOST_DB_PASS: ENC[AES256_GCM,data:hWvFVge7Z4C6P5Bo/e+HvxggzfA=,iv:70QCcQ1hwfmL8vbpNVn1bXOqrXT2QwCyrQXrcV/bg8I=,tag:tKzKRjbCs/heDNAPwWSgdA==,type:str]
     SECRET_GHOST_DB_USER: ENC[AES256_GCM,data:Gjod9bidFPz26yhe+C2//sjUcpE=,iv:4/bbb7achB8sOAVe0h+ThZYoNH86ESugaExs4Fmtzm0=,tag:HNs5y63U3cwdUpRaIaIHEg==,type:str]
     SECRET_GHOST_DB: ENC[AES256_GCM,data:MkAq7FQES34=,iv:kgo9Mne/QVS+pdXZbz7crAdEjgjWEdGBzCBZzGlUf2U=,tag:0QwLKO5UbsGN84T/nLwAJw==,type:str]
-    SECRET_GHOST_DOMAIN: ENC[AES256_GCM,data:8ZZbhr3Jd0MVvV4r7xi3dKs=,iv:POUUlznUTg0Dj4uXS45h9LS9SMM95nZED1/iHndJmaI=,tag:G7iuSq/tFaLbuRD/wAN3/Q==,type:str]
+    SECRET_GHOST_DOMAIN: ENC[AES256_GCM,data:1PNJEvtkG86MzQ==,iv:AOOCnf7+KbuVnK7BJhj6PmVpU1Kc7CM/GKOzqy/6Uc0=,tag:lF2P1pLHvgLb5rBpxxVSvQ==,type:str]
     SECRET_GHOST_PASS: ENC[AES256_GCM,data:AEYirPe8RWtLyo/GQPW9zt7iLmA=,iv:RH1dwvVv+QaG7m5FwfayWs/8BlrfpjAnHOR4CXSCQmE=,tag:7oTgyT7Qsi/SHHFjT1SMBw==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:zkpE8PKI/2si3ZwkTw==,iv:t9EYCs7N7YbVqtq6GMDUytazClH08RT4w5uD4swGho0=,tag:sgivAkgfq9H3he3+9GZD+w==,type:str]
     SECRET_KASTEN_BUCKET_PATH: ENC[AES256_GCM,data:bMER47cY4mNWW3aKKgppGVKjizH4ciz9K3FlIbUXM5zI5EdG7Xq4snAINoKnitvHknc=,iv:1QacuI87g41RXtWIu5g8DnAp5a6JjriJmM/BTBqQKnY=,tag:Y+LraoIlWNTFiZpujoKHLg==,type:str]
@@ -45,8 +45,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-11T01:23:24Z"
-    mac: ENC[AES256_GCM,data:19lIJsDH4Te8Ab04wFCI9xPK+KH7psTNLwS6fPLirJD8YRJa8a+i6ivlpmVgLvKPMOIngh6jMc4AUu5qGpIS76ci9xhzf7ZNyqfzrLiBnQfcKbGpkmj4e0ZKCM4KLpru72anYvP9LXKgyc4yMeEZkA9vYUrh2B22jS21Vd6nw1Y=,iv:hzT8e66aFkZYxvlX2l79BDknjJ8KwjYeHtzYrZs9acc=,tag:v0bD2zz4JZqxSo9/J0tHPg==,type:str]
+    lastmodified: "2022-04-11T01:29:58Z"
+    mac: ENC[AES256_GCM,data:2io03Yk+KNupNFj9ygFrDKxOOVe7EMqWt/bMzQcyxY0aIp09Zs1QgDKTJHxqRlqLIE09ZcPw6fdzH1pzznNKJId6w448szlwZvXgVWlk7bAueJUNL9f0c9uYQDn9NgStBes01umc5qeBmzX5fi5zdvrtXiJlLp8aF3ozdr+cRQs=,iv:NiMaMjQRZdhpBwg03dB2Myn1wyiIut5Fffx3kgK50+I=,tag:EcfpVycRO7Zp7UoyDyVlZw==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
