--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -34,6 +34,10 @@ spec:
       main:
         enabled: true
         ingressClassName: "nginx"
+        annotations:
+          external-dns.alpha.kubernetes.io/hostname: ${SECRET_GHOST_DOMAIN}
+          external-dns/is-public: "true"
+          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         hosts:
           - host: &host ${SECRET_GHOST_DOMAIN}
             paths:
