--- a/cluster/apps/networking/external-dns/helm-release.yaml
+++ b/cluster/apps/networking/external-dns/helm-release.yaml
@@ -42,6 +42,7 @@ spec:
     txtOwnerId: "default"
     domainFilters:
       - "${SECRET_PUBLIC_DOMAIN}"
+      - "${SECRET_GHOST_DOMAIN}"
     resources:
       requests:
         memory: 100Mi
