--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -36,6 +36,7 @@ spec:
         ingressClassName: "nginx"
         annotations:
           external-dns.alpha.kubernetes.io/hostname: ${SECRET_GHOST_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_GHOST_DOMAIN}"
           external-dns/is-public: "true"
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         hosts:
