--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
           external-dns/is-public: "true"
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         hosts:
-          - host: &host ${SECRET_GHOST_DOMAIN}
+          - host: &host "www.${SECRET_GHOST_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
