--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
           external-dns.alpha.kubernetes.io/hostname: ${SECRET_GHOST_DOMAIN}
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_GHOST_DOMAIN}"
           external-dns/is-public: "true"
-          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+          # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         hosts:
           - host: &host "www.${SECRET_GHOST_DOMAIN}"
             paths:
