--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
         ingressClassName: "nginx"
         annotations:
           external-dns.alpha.kubernetes.io/hostname: ${SECRET_GHOST_DOMAIN}
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_GHOST_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "${SECRET_GHOST_DOMAIN}"
           external-dns/is-public: "true"
         hosts:
           - host: &host "${SECRET_GHOST_DOMAIN}"
