--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -38,8 +38,9 @@ spec:
           external-dns.alpha.kubernetes.io/hostname: ${SECRET_GHOST_DOMAIN}, www.${SECRET_GHOST_DOMAIN}
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_GHOST_DOMAIN}"
           external-dns/is-public: "true"
+          nginx.ingress.kubernetes.io/from-to-www-redirect: "false"
         hosts:
-          - host: &host "*.${SECRET_GHOST_DOMAIN}"
+          - host: &host "${SECRET_GHOST_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
