--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -64,4 +64,4 @@ spec:
         rootPassword: "${SECRET_GHOST_PASS}"
       primary:
         persistance:
-          existingClaim: ghost-db-v1
+          existingClaim: data-ghost-mariadb-0
