--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -53,7 +53,7 @@ spec:
             proxy_hide_header "content-security-policy";
             proxy_hide_header "X-Frame-Options";
             proxy_set_header Accept-Encoding "";
-            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/qbittorrent/nord.css"></head>';
+            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_PUBLIC_DOMAIN}/css/base/qbittorrent/nord.css"></head>';
             sub_filter_once on;
         hosts:
           - host: &host "qb.${SECRET_PUBLIC_DOMAIN}"
@@ -63,17 +63,17 @@ spec:
         tls:
           - hosts:
               - *host
-    # metrics:
-    #   enabled: true
-    #   exporter:
-    #     image:
-    #       repository: ghcr.io/k8s-at-home/prometheus-qbittorrent-exporter
-    #       tag: v1.2.0
-    #   serviceMonitor:
-    #     interval: 1m
-    #     scrapeTimeout: 10s
-    #   prometheusRule:
-    #     enabled: true
+    metrics:
+      enabled: true
+      exporter:
+        image:
+          repository: ghcr.io/k8s-at-home/prometheus-qbittorrent-exporter
+          tag: v1.2.0
+      serviceMonitor:
+        interval: 1m
+        scrapeTimeout: 10s
+      prometheusRule:
+        enabled: true
     podSecurityContext:
       supplementalGroups:
         - 100
