--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -61,7 +61,7 @@ spec:
           local:
             directory: /rules
         rule_path: /tmp/scratch
-        alertmanager_url: http://prometheus-alertmanager:9093
+        alertmanager_url: http://alertmanager-operated:9093
         ring:
           kvstore:
             store: inmemory
@@ -95,20 +95,6 @@ spec:
               category: logs
             annotations:
               summary: "Zwavejs2mqtt is unable to reach MQTT"
-      #
-      # frigate
-      #
-      # - name: frigate
-      #   rules:
-      #     - alert: FrigateUnableToReachMQTT
-      #       expr: |
-      #         sum(count_over_time({app="frigate"} |~ "(?i)unable to connect to mqtt server"[2m])) > 0
-      #       for: 2m
-      #       labels:
-      #         severity: critical
-      #         category: logs
-      #       annotations:
-      #         summary: "Frigate is unable to reach MQTT"
       #
       # *arr
       #
@@ -146,3 +132,17 @@ spec:
               category: logs
             annotations:
               summary: "Home Assistant is unable to connect to postgresql"
+      #
+      # node-red
+      #
+      - name: node-red
+        rules:
+          - alert: NodeRedUnableToReachHomeAssistant
+            expr: |
+              sum by (app) (count_over_time({app="node-red"} |~ "(?i)home assistant.*connecting to undefined"[2m])) > 0
+            for: 2m
+            labels:
+              severity: critical
+              category: logs
+            annotations:
+              summary: "Node-Red is unable to connect to Home Assistant"
