feat: add trash-updater and unpacker

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -16,6 +16,6 @@ resources:
   - sonarr
   - sonarr-uhd
   - tautulli
-  # - trash-updater
-  # - unpackerr
+  - trash-updater
+  - unpackerr
   - youtubedl-material
