--- a/cluster/apps/media/trash-updater/secret.sops.yaml
+++ b/cluster/apps/media/trash-updater/secret.sops.yaml
@@ -6,27 +6,50 @@ metadata:
     namespace: media
 type: Opaque
 stringData:
-    RADARR_APIKEY: ENC[AES256_GCM,data:bUEZvI/ZDUqcTzHsVd/6sCcmh1y/MRIGX8CAZQyTLCs=,iv:tTXXycRuYpguwK5x/o2njJNTvPOPBwIX/Z87fhYbp/k=,tag:rVB5A0em0upVsUlPfXOtOQ==,type:str]
-    RADARR_UHD_APIKEY: ENC[AES256_GCM,data:E8cG5Ph4mcvEBBDGq/qfX8oL6Ldbve76PR2uGFtNMm8=,iv:Lzn9Il96G5pdqFgKV78Qck14GeDzG0++zBJKJSw7fIU=,tag:0KS46yHynL7VMHK3h5RzhA==,type:str]
-    SONARR_APIKEY: ENC[AES256_GCM,data:V2+ZDSEG50CwXRqwgIwJofhTlv8S3qsT7FQrXLdWKG8=,iv:mhtrlINmo8GKoR5ZJRjKqqI8QZJbI90voLARiHXXb2c=,tag:EyoU8J1MSquYozZqdThJ5g==,type:str]
-    SONARR_UHD_APIKEY: ENC[AES256_GCM,data:bCOC9yhe9KqUjfrX2qJF91DqOWwA2oSzbndONyX/zsw=,iv:v9ZtK2/uospXBAxFiG7HMDX+Ki6Ey7AK2fdLOt1zd7E=,tag:RoLm3QZP8eXKvxVYtDj+oQ==,type:str]
+    RADARR_APIKEY: ENC[AES256_GCM,data:DtRIHbY6Xb4vDucZWYoDTk4gP/KeF3q0rpQ9YTjkLvE=,iv:ruL/lldVLLZp6p5F0NP7TkoSZT8o+3lwEwdAqu6zvOg=,tag:ARzlBrzgH5wbRHPdCqie6w==,type:str]
+    RADARR_UHD_APIKEY: ENC[AES256_GCM,data:tsWpe0v4RejIluQKjbEEUruCV3XSA1FLP7CrULrqSf4=,iv:p2mkMV9dRWAupOU1WMhmKP+MuvgtV38VYjjl+FSdhbc=,tag:ii1xmWC7f2l+XeEeNsHa6g==,type:str]
+    SONARR_APIKEY: ENC[AES256_GCM,data:/ptHEgLzluOdyub0zpOZcr5vtwwoeWHXuNfrSiMojEQ=,iv:J54y5RwHPpZq62sE4jnjDUqeRf6acp7fyTgrFr11lWo=,tag:rZtYZdsYh1ubYrspY/AWeg==,type:str]
+    SONARR_UHD_APIKEY: ENC[AES256_GCM,data:KlcR9Hf/ku76J5JG0DnBWNcLp8u5CcZ/OCTDcT8oMp4=,iv:U32fex5phTAYtCzbaHb1F3uOvPsxCygXLijzsdaIH8g=,tag:1kASxI4JzIBPOkGeDv6LqQ==,type:str]
 sops:
     kms: []
-    gcp_kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2022-04-11T21:24:04Z"
+          enc: CiQA1r6bIObcf4vA41g6WC7cMdBVeDvyAweN7gcTXD0c+VwdbQoSSQCbI6ie8oB6KUwvk/stVpXPA3UclaETYCiYiOP1aB7kYdSUCIK2I3SyiZhr6XTN2I/BDZ/t0RFqlCUJtjU3jrCXlUe0faC8lEE=
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age15uzrw396e67z9wdzsxzdk7ka0g2gr3l460e0slaea563zll3hdfqwqxdta
+        - recipient: age1ms2d7n4yhaq0mdap4cfyaq2xtfutlachqapkjfr0z2qr7ghc2ckq000jhm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1SzdoQ0loZ3lXSVhTa2xx
-            SWRGZGEwR2NQQjFLSlpXOGs4dHRpMFpYdURRCjFEY1dtTVY1RXhuRWx2N1ZFV25l
-            SHhsZlozMWV4ck0vR1o0Sncwd2NXRlEKLS0tIDZLcWswWEp6dGtycFVONy9xNnl0
-            aUV2RmN2U2MyZEUrbUZnVlY3d3hIcFUKp40tmI5HM3iumet9Z04aU/MdBDEWbWhi
-            zlOcZFKkgrL5a1HyBkv4eXWIas10C2cci0cd3Q6Z2UCFgEHWuki5JA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSM2ppRDFwVUlOWE1aMTU0
+            ZGRuekdiM3pUYWNHSXJ2YlFlb2lkeWl6cER3CmlCNjdHL2IvMnJ3ZzNEV3J2L3I2
+            U3MxNXNia0F3OFJhNVkwVnU0YVN1c28KLS0tIEtFd0U5VmJtVWd6OHo3NWZxYjlE
+            VzhWZmVMdm9rYXVpa1o1KzErRk1lb1EKOjXTo+K7rmkgckoty1x3f8fhubhZ2RAG
+            p4kNCRZVQEfbdcqsBQRxuslOquZY6YQw//O4RPGd697LeNgbFfiQVQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-02-02T19:18:11Z"
-    mac: ENC[AES256_GCM,data:zv/vKR4MpDgQyXyfPqg04Grg1glfidLR+0zLeLXaAEGLs05E+ILc0/wmRi7KVcyo7AX3zkTP2lIE3ViF4J7z87nxfW1cNWOKaUQ5iBb/INHDbfHZ1SIbfzQWRw+MkZxz3PAVgXauLvvuybFW0r5cHlIH+eYTmcu+mRJLmJizUOk=,iv:VfnBycIBNJamm1lwlvf5CcdT5sy674v0jNnq1wSFfa8=,tag:GQnbCUiuz76tN+3TLiin2g==,type:str]
-    pgp: []
+    lastmodified: "2022-04-11T21:40:31Z"
+    mac: ENC[AES256_GCM,data:aBIMY9O1/scxhes3z/iHQ4uSMmgM69IXhWYzIzLzW6oSDRPoPvkbG3KlXlQFz2eFDBN0d/w8malo5DIvnmTLVAJrP30PWhbYIhGn8uqXYjOJLK7WQV6plMNbd/u6sDC/wWv6cwpelAWOnG3EP5ZeBFdkBEevwOgCyJC4Uphl5DI=,iv:s6Ho9fdHeF44BgvpljasJMvrgyc7BtnnvUDQUNQlzOU=,tag:LWIKpZIshbx08Zqyhs6uUQ==,type:str]
+    pgp:
+        - created_at: "2022-04-11T21:24:04Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+
+            hQIMAyQ1SH08BnVLARAAj4IIZe6F6segecF+xtxkBUKCSKj6T9E2Cbs82RPTJKDQ
+            QkEv1WF5OLgxOAHxYxTowJW7w5xCTPzZnMiGFpi3eHwR447BpXkH8G8dbnKILFH7
+            Otwkpl5lyBQQ3GBxUOctdlhoe7cnimnAvD+j2RQa/McMYGvEqq94oHuPJUU50O4w
+            fHiim99tJTPQbDneNW2REVCw2pH0yTmhzwLiZayTDDULmugKo556fEU4y3Ag0xrs
+            NZzyB6w1fBhlvvprNgRmtY9I7DYVKckL7k/VVLcfyrPWdnBkxRg7RyucPqnsLah0
+            gWGIBw50uyDOyL5R5jtdrtEjoHfKcX7SQTHkBDyKqa2BZjI44gj+bZDT9xxX+AVI
+            h1SEOt2UKyzC1f0DFDKqut40aqoNXFzUWwKlwPJxvK3nzNA7YCnanIfpo8EQsBh0
+            SF356j+lMu/arXS6wWmBOyt5hL1wtI3nfcBQoao2r/cmQd/h6e9B4yFtZULNljXh
+            TzaTm1dr2YPmLp9gUUo2sCCb9mf5414NR03m5K1BDs/R7aEm7m+mn4KWib5WsfvX
+            xM6DFQPT+G8ZHE/+6ZNzxsb5hFlGf9JxmgYTI6BBO2Nnz4qDqT/PMau1zMsPxoWL
+            Rti/Ce8zaZNMOmSB6+7XezlqNm6L8PD+obhLliLplAUjDE1f/d/YEfh4fjP2APbS
+            XAGiHv9HAp1rBETgNB9yjbEnT6nAjR18Ae8SZ1NEmRszS369c5rLF2IzskUqt9yu
+            kHTEdFWh8LwV72oo8Ce/gDlRBhd4EXhGPXcBpTUuqZlbIhGGBZE52MFnV73U
+            =aN2q
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+    version: 3.7.2
