--- a/cluster/apps/media/unpackerr/secret.sops.yaml
+++ b/cluster/apps/media/unpackerr/secret.sops.yaml
@@ -5,29 +5,52 @@ metadata:
     name: unpackerr
     namespace: media
 stringData:
-    UN_SONARR_0_API_KEY: ENC[AES256_GCM,data:dNn4Vdqa7oPVNaIccbRDy2W9m3rxgUXoaIdfWAuWYEs=,iv:lHsYCrCnInaIqimLnGklIHRb3GGQeCczK0BV0n9TuR0=,tag:NVKGk33ODMuaABezgGApqQ==,type:str]
-    UN_SONARR_1_API_KEY: ENC[AES256_GCM,data:6Yq4hWhTwX+GrvOARD/YAGimIyDMIyAlZ2oCfqx9Dak=,iv:3nEJMc3hoEEe6m48GRfwCS2nHgNEw8FahOxZheqfSPA=,tag:HIjucEaTALr7CkmUWYFRoA==,type:str]
-    UN_RADARR_0_API_KEY: ENC[AES256_GCM,data:O9+xEG/gc2D1/1MVpkfv1aAq5LVFKVA7yWF1uJvZDXA=,iv:8iyxFm5t9KkrH1GO+LkItsVNGJu+RBlS2CoEdRgn1pc=,tag:wB32HB+pMDU5or6gcobdoQ==,type:str]
-    UN_RADARR_1_API_KEY: ENC[AES256_GCM,data:PLYf8nx0pNUt81ktYPff0Pqkz3BNhL6T/k3VLATfBAU=,iv:6znGKMrzd4S34VHa/RDEHxwIOzAtegFVvWju9BStFWU=,tag:ZcCmHw4Vb7aMknQLJKkssQ==,type:str]
-    UN_LIDARR_0_API_KEY: ENC[AES256_GCM,data:QhVDvFyVYLRmkw76Qnw4JCcdRFeWXjmt+1GW9I7vNNU=,iv:NhpjbVuIiJU7fbq2iQ6rotA68ssNBt9XwLwCpGgDkec=,tag:EFLNwkJwj1Kqm5EIsZUVJw==,type:str]
-    UN_READARR_0_API_KEY: ENC[AES256_GCM,data:UPjd3293gDehX3EMBNkQJRf80mZZuWl7HAUS3wCyxAw=,iv:ERtdxxCVqWS7t3LkLPY+gdxVPXljwlYe4VM0braf+zQ=,tag:e64uptTUQ3f01Kv6BUgbuQ==,type:str]
+    UN_SONARR_0_API_KEY: ENC[AES256_GCM,data:As92OiQpDGnM7X1dqNP+EJOX90q/Cl+CORXs64GpncM=,iv:OOJ5CkWM3r3n4whf+TJj90ADNklU3vwyYKoAjxJoIyE=,tag:3PRBxvkpZdGHTFN1IoLXUQ==,type:str]
+    UN_SONARR_1_API_KEY: ENC[AES256_GCM,data:JGQ9RkT93R/S85TF7UZVIXaKl9TFOZtbN4tR1bUGuKg=,iv:Q5NByD1/gtg7KdQ46v9CGWSMWpKBlSCsBvcEt0GPKdY=,tag:RYr54KRH62k11F4mM2+qYg==,type:str]
+    UN_RADARR_0_API_KEY: ENC[AES256_GCM,data:O1O+qNWGtDH+l49YLJnBzI1vHBcsY7xTBU1kGV/PdFc=,iv:iirQPORTP+QCF460uywheBVCtjvUUQmMNuZhw9YAs00=,tag:85XEcf7frdKHANtz3dDJdg==,type:str]
+    UN_RADARR_1_API_KEY: ENC[AES256_GCM,data:W4FuqJg7rFpDUp9Zv610ViVuUhkodHJoWI06lJt919U=,iv:tBg+dRTe8Y1QeDIYJGM1hZ/iYaLxOIBh3IlCGydCYhc=,tag:l91DOzlcYApv4JV5z6I03g==,type:str]
+    UN_LIDARR_0_API_KEY: ENC[AES256_GCM,data:8GbH2AmTInILPOIyRcQhJXgBKRs88OJSs9C/2nsKO08=,iv:9omhSloso+Lx9Ayzy9gduEDdzXMGmwEJuw3AmnUOoo4=,tag:8+SoJkrnUUgQVBKXzybxBA==,type:str]
+    UN_READARR_0_API_KEY: ENC[AES256_GCM,data:4vYRHbLO1a16vzR6NUL24Qli/ceJz6KygnOaaYRzu9E=,iv:LdMB16VMVp4IM+Ny+Nx2iMYoyoip4qYV62DdNY18RHM=,tag:zke8NjnT12q6reOcDzjLkg==,type:str]
 sops:
     kms: []
-    gcp_kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2022-04-11T21:22:55Z"
+          enc: CiQA1r6bIOoL/VySbytX/Web58A31aiXL+5TsyjWoRFlAjQuUscSSQCbI6ie/PAvH2L9oR3UPxKHIinLoLgMGyK8k78r3OXewPEWI49uXZCFxCeSibb44BExHptOC6z3SN2/D2xJiWmT+W1ga+caxQM=
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age15uzrw396e67z9wdzsxzdk7ka0g2gr3l460e0slaea563zll3hdfqwqxdta
+        - recipient: age1ms2d7n4yhaq0mdap4cfyaq2xtfutlachqapkjfr0z2qr7ghc2ckq000jhm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaUldTSWdlcmpJNjlpblNP
-            K2x0RGVsZ0RXcWRCSXhsUThoaW5rbWljNndzClFFU2MzYUtnR3RNb1NteWRZZDRS
-            SmJNdUtVRnc5MnJPR3hlcXlTZXpBU3cKLS0tIC9vSWhVUDJid3BOZXVNZTNJZ2Y4
-            cEFRVkdHbzdJcVQzSzQ1UmNVWGROSjAKh10HB7vKq9RTQEDxNnFZYX+gUSJESSMf
-            fw53wQznjr3vpn8/xOisTSW5SsiI1GeUY5nhjtuCKjBq9Rzu4qCmJQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGaU1VQnkybGh0cUFPejRW
+            cGNNOFJVR0toNzA2clBTckYra2JaQUpQeTBvCjRtQ0kyLzRQWFlvV09CZ1U1SnZE
+            NU5RWWdrTFoxTmcxUnYrbG0xMjdVbDQKLS0tIEFHeEJlVTYrb0hTRnduaEFCbXdw
+            dHdXeG96WFQ0alNjemVsLytEaTVGWE0KgtjvQlbcvS/8bjqks8oSLXF3hvKelGjg
+            yDkiZtqEN3GeZzQB0Pqe7FXzkRpVthxm0OOfPCIh9hleBlulZpxUfA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-01-12T16:42:57Z"
-    mac: ENC[AES256_GCM,data:Rsib202OvCxGbHwGUCmoDk5hvUuYc6VnBl9IxyPTG4T1HX1r/8R0TVY7al1xyuS/XEOutuLZ7tJ4JO4NwV/6uHN1wCXwPV36+T3prQ4tXcG2c35NL5f3xekUhD+sar7SwYaF0alzfETATN20gzU3jb4RP7SfH7kCbC/DzkAmPpQ=,iv:hn0F/4YWGfF2tsGaqsGZPiOJ7STGaNFK+rBRgplhk98=,tag:IRwgPFB/1wuAwHPcDlybkQ==,type:str]
-    pgp: []
+    lastmodified: "2022-04-11T21:37:45Z"
+    mac: ENC[AES256_GCM,data:ye7EKtXCFLC3Us2ze9OA0buP/b7ms0G/0IbU1BuFs2neftsuj5FNHBx4wBQlcwvt0JosSxP7E45Df1hGMfV+VrfAFgXgsRL27Ly9BYzl+23Lp0wP3PulDmFDE38HqkocfaQ8pENu33zhvtRBAHRgZp1Ujx7YgBGYC2fakaSo00Q=,iv:hZ2yOXLTcxg5md3RmnocRwu+XEKX7BKdxCoyRmND6Hk=,tag:jG++tE4Pfoy9Th8NFUDKNg==,type:str]
+    pgp:
+        - created_at: "2022-04-11T21:22:55Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+
+            hQIMAyQ1SH08BnVLAQ/+PI0ZjO4Pyz65d6SMgvpl0Nbuz6CWQYPgTv8oDUP/ltoZ
+            /hxopXPJdQucRqwIOwC1IWmFmB4dutrCW955mQFSllvOdhYRXStz1Wdhs82pphqT
+            GRMRSwhIMrlbWtti1weEmNkuNglrBKPOqATXeXsx/+lthvVmPM2RZpKRAK7lvDEP
+            mQZ7I6qPsohU2btKvNVGCKo1bsk99RvbwoQ12etRP3qsk9HCczBtF3BjU16GSpZK
+            uC5vAWuERg5rEspPecYXUDgZTss2OMTDDfsUz8Wp6Rt0cy9Uer3LCsYAlSbAnX4B
+            DAmtx+9RmsbeAvufso4JzJEOEStznfnDv6USprK+G31M+/r/sS8+2ywa8naxHx/h
+            UqPSPvW3lTpkf2YPegN9XrUpz5lM7ZdnQ5Ff+8r4t+bE4rR+HvZzEEMZPVjckHP+
+            wa7MEvBKSNTnKwZNL3TP6YDL3g0n+HIlR0d2minG369sVZXSlb8nceOyTo9gq4lA
+            e3V2pp5e82jEcUitwt3c8ShtLV1U8yQ+4mT3CJGzX5l60FtRwCWKDcNVytpeOJIm
+            fBKIKat0LdffogVBL34ywiJ8VcZgVZs9xIYUXlI2oLlGhMz8qZ9UJlMclI2/1A48
+            3FFN//GOvDTq3aEHPinkvmvwcgsrMOhOO5VwP25F1kov58QOVxQfccHkvyQdJbvS
+            XAEnuyCpjHQTO4FQdUkQiZq+llmsJ5DqGVmVzZMGqAZz16tk5FbESfgvHTfKXfOO
+            JW+ROfZmiWV1I8zHPe9LWR+a4d9YzWRmJ6xoAUMt0ffqP8iGji9kcclVbbpQ
+            =Qgl6
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+    version: 3.7.2
