debug: existingClaim not used

--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -64,4 +64,5 @@ spec:
         rootPassword: "${SECRET_GHOST_PASS}"
       primary:
         persistance:
-        existingClaim: ghost-db-v1
+          enabled: true
+          existingClaim: ghost-db-v1
