debug: rook-ceph:

--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - external-snapshotter
   - kube-prometheus-stack
   # TODO: [rook-ceph] Enable CRDs on next rebuild
-  # - rook-ceph
+  - rook-ceph
