--- a/cluster/apps/default/ghost/helm-release.yaml
+++ b/cluster/apps/default/ghost/helm-release.yaml
@@ -35,7 +35,7 @@ spec:
         enabled: true
         ingressClassName: "nginx"
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: ${SECRET_GHOST_DOMAIN}, www.${SECRET_GHOST_DOMAIN}
+          external-dns.alpha.kubernetes.io/hostname: ${SECRET_GHOST_DOMAIN}
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_GHOST_DOMAIN}"
           external-dns/is-public: "true"
           nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
