--- a/cluster/apps/kasten-io/k10/policies/home.yaml
+++ b/cluster/apps/kasten-io/k10/policies/home.yaml
@@ -1,38 +1,9 @@
-apiVersion: config.kio.kasten.io/v1alpha1
 kind: Policy
+apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
   name: home
   namespace: kasten-io
 spec:
-  actions:
-    - action: backup
-      backupParameters:
-        filters:
-          includeResources:
-            - group: ""
-              version: ""
-              resource: persistentvolumeclaims
-              name: ""
-              matchExpressions:
-                - key: kasten.io/backup-volume
-                  operator: In
-                  values:
-                    - enabled
-        profile:
-          name: b2-k3s-k10
-          namespace: kasten-io
-    - action: export
-      exportParameters:
-        exportData:
-          enabled: true
-        frequency: "@daily"
-        migrationToken:
-          name: home-migration-token
-          namespace: kasten-io
-        profile:
-          name: b2-k3s-k10
-          namespace: kasten-io
-      retention: {}
   frequency: "@daily"
   retention:
     daily: 7
@@ -43,3 +14,29 @@ spec:
         operator: In
         values:
           - home
+  actions:
+    - action: backup
+      backupParameters:
+        filters:
+          includeResources:
+            - resource: persistentvolumeclaims
+              matchExpressions:
+                - key: kasten.io/backup-volume
+                  operator: In
+                  values:
+                    - enabled
+        profile:
+          name: b2-k3s-k10
+          namespace: kasten-io
+    - action: export
+      exportParameters:
+        frequency: "@daily"
+        profile:
+          name: b2-k3s-k10
+          namespace: kasten-io
+        migrationToken:
+          name: home-migration-token
+          namespace: kasten-io
+        exportData:
+          enabled: true
+      retention: {}
