--- a/cluster/apps/kasten-io/k10/policies/home.yaml
+++ b/cluster/apps/kasten-io/k10/policies/home.yaml
@@ -34,9 +34,9 @@ spec:
         profile:
           name: b2-k3s-k10
           namespace: kasten-io
-        migrationToken:
-          name: k10-migration-token
-          namespace: kasten-io
+        # migrationToken:
+        #   name: k10-migration-token
+        #   namespace: kasten-io
         exportData:
           enabled: true
       retention: {}
