--- a/cluster/apps/kasten-io/k10/policies/media.yaml
+++ b/cluster/apps/kasten-io/k10/policies/media.yaml
@@ -24,9 +24,9 @@ spec:
     - action: export
       exportParameters:
         frequency: "@daily"
-        migrationToken:
-          name: k10-migration-token
-          namespace: kasten-io
+        # migrationToken:
+        #   name: k10-migration-token
+        #   namespace: kasten-io
         profile:
           name: b2-k3s-k10
           namespace: kasten-io
@@ -74,9 +74,9 @@ spec:
     - action: export
       exportParameters:
         frequency: "@daily"
-        migrationToken:
-          name: k10-migration-token
-          namespace: kasten-io
+        # migrationToken:
+        #   name: k10-migration-token
+        #   namespace: kasten-io
         profile:
           name: b2-k3s-k10
           namespace: kasten-io
